@@ -1,30 +1,27 @@
 package io.kestra.core.runners;
 
+import java.security.GeneralSecurityException;
+import java.util.*;
+import java.util.function.Consumer;
+
 import com.google.common.collect.ImmutableMap;
+
 import io.kestra.core.exceptions.IllegalVariableEvaluationException;
 import io.kestra.core.models.Label;
 import io.kestra.core.models.executions.Execution;
+import io.kestra.core.models.executions.LoopRun;
 import io.kestra.core.models.executions.TaskRun;
-import io.kestra.core.models.flows.Flow;
 import io.kestra.core.models.flows.FlowInterface;
-import io.kestra.core.models.flows.Input;
+import io.kestra.core.models.flows.GenericFlow;
 import io.kestra.core.models.flows.State;
-import io.kestra.core.models.flows.input.SecretInput;
-import io.kestra.core.models.property.Property;
 import io.kestra.core.models.property.PropertyContext;
 import io.kestra.core.models.tasks.Task;
 import io.kestra.core.models.triggers.AbstractTrigger;
 import io.kestra.core.utils.ListUtils;
-import io.kestra.plugin.core.trigger.Schedule;
+import io.kestra.core.utils.MapUtils;
+
 import lombok.AllArgsConstructor;
 import lombok.With;
-
-import java.security.GeneralSecurityException;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.function.Consumer;
 
 /**
  * Class for building {@link RunContext} variables.
@@ -32,6 +29,91 @@ import java.util.function.Consumer;
 public final class RunVariables {
     public static final String SECRET_CONSUMER_VARIABLE_NAME = "addSecretConsumer";
     public static final String FIXTURE_FILES_KEY = "io.kestra.datatype:test_fixtures_files";
+    public static final String ENVS = "envs";
+    public static final String LABELS = "labels";
+
+    /**
+     * Explicit, sorted list of all dot-separated expression paths structurally available
+     * at runtime in a Kestra flow execution (e.g. {@code "flow.id"}, {@code "execution.startDate"},
+     * {@code "taskrun.value"}).
+     * <p>
+     * Dynamic keys whose children depend on the specific flow/execution ({@code inputs},
+     * {@code outputs}, {@code tasks}, {@code labels}, {@code vars}, {@code files}, {@code envs},
+     * {@code globals}) are included as top-level entries only — their children vary per run.
+     * <p>
+     * When {@link DefaultBuilder#build} changes (new field added, new context key introduced),
+     * this list must be updated to match. The test {@code RunVariablesContextPathsTest}
+     * catches drift by asserting that a full stub-built context exposes no paths absent from here.
+     */
+    public static final List<String> EXECUTION_CONTEXT_PATHS = List.of(
+        // Top-level dynamic keys — children are flow/execution-specific, not listed individually
+        "envs",
+        "files",
+        "globals",
+        "inputs",
+        "labels",
+        "outputs",
+        "tasks",
+        "vars",
+        // Execution
+        "execution",
+        "execution.id",
+        "execution.originalId",
+        "execution.outputs",
+        "execution.startDate",
+        "execution.endDate",
+        "execution.state",
+        // Flow
+        "flow",
+        "flow.id",
+        "flow.namespace",
+        "flow.revision",
+        "flow.tenantId",
+        // ForEach/EachParallel/EachSequential iteration context (item.*)
+        "item",
+        "item.index",
+        "item.key",
+        "item.parent",
+        "item.parent.index",
+        "item.parent.key",
+        "item.parent.value",
+        "item.parents",
+        "item.value",
+        // Kestra configuration
+        "kestra",
+        "kestra.environment",
+        "kestra.url",
+        // Nearest flowable parent (first entry of parents list)
+        "parent",
+        "parent.task",
+        "parent.task.id",
+        "parent.taskrun",
+        "parent.taskrun.value",
+        // All flowable ancestors
+        "parents",
+        // Current task
+        "task",
+        "task.id",
+        "task.type",
+        // Current task run
+        "taskrun",
+        "taskrun.attemptsCount",
+        "taskrun.id",
+        "taskrun.iteration",
+        "taskrun.parentId",
+        "taskrun.startDate",
+        "taskrun.value",
+        // Trigger
+        "trigger"
+    );
+
+    /**
+     * Returns the sorted list of all dot-separated expression paths structurally available
+     * at runtime. See {@link #EXECUTION_CONTEXT_PATHS} for details.
+     */
+    public static List<String> allContextPaths() {
+        return EXECUTION_CONTEXT_PATHS;
+    }
 
     /**
      * Creates an immutable map representation of the given {@link Task}.
@@ -46,6 +128,21 @@ public final class RunVariables {
         );
     }
 
+    public static Map<String, Object> executionFormattedOutputMap(TaskRun taskRun, Map<String, Object> outputs) {
+        return Optional.ofNullable(outputs)
+            .map(
+                o -> Map.of(
+                    "outputs",
+                    (Object) Map.of(
+                        taskRun.getTaskId(),
+                        Optional.ofNullable(taskRun.getValue())
+                            .map(v -> Map.of(v, (Object) o))
+                            .orElse(o)
+                    )
+                )
+            ).orElse(Collections.emptyMap());
+    }
+
     /**
      * Creates an immutable map representation of the given {@link TaskRun}.
      *
@@ -53,7 +150,7 @@ public final class RunVariables {
      * @return a new immutable {@link Map}.
      */
     static Map<String, Object> of(final TaskRun taskRun) {
-        ImmutableMap.Builder<String, Object> builder = ImmutableMap.<String, Object>builder()
+        ImmutableMap.Builder<String, Object> builder = ImmutableMap.<String, Object> builder()
             .put("id", taskRun.getId())
             .put("startDate", taskRun.getState().getStartDate())
             .put("attemptsCount", taskRun.getAttempts() == null ? 0 : taskRun.getAttempts().size());
@@ -74,7 +171,7 @@ public final class RunVariables {
     }
 
     /**
-     * Creates an immutable map representation of the given {@link Flow}.
+     * Creates an immutable map representation of the given {@link FlowInterface}.
      *
      * @param flow The flow from which to create variables.
      * @return a new immutable {@link Map}.
@@ -85,10 +182,10 @@ public final class RunVariables {
             .put("namespace", flow.getNamespace());
 
         Optional.ofNullable(flow.getRevision())
-            .ifPresent(revision ->  builder.put("revision", revision));
+            .ifPresent(revision -> builder.put("revision", revision));
 
         Optional.ofNullable(flow.getTenantId())
-            .ifPresent(tenantId ->  builder.put("tenantId", tenantId));
+            .ifPresent(tenantId -> builder.put("tenantId", tenantId));
 
         return builder.build();
     }
@@ -100,10 +197,85 @@ public final class RunVariables {
      * @return a new immutable {@link Map}.
      */
     static Map<String, Object> of(final AbstractTrigger trigger) {
-        return ImmutableMap.of(
+        return Map.of(
             "id", trigger.getId(),
-            "type", trigger.getType()
+            "type", trigger.getType(),
+            "_context", Map.of(
+                "id", trigger.getId(),
+                "type", trigger.getType()
+            )
         );
+    }
+
+    /**
+     * Creates an immutable map representation of the given {@link LoopRun}.
+     */
+    static Map<String, Object> of(LoopRun loopRun) {
+        Map<String, Object> loopRunMap = HashMap.newHashMap(3);
+        loopRunMap.put("index", loopRun.index());
+        if (loopRun.key() != null) {
+            loopRunMap.put("key", loopRun.key());
+        }
+        loopRunMap.put("value", loopRun.value());
+        if (loopRun.parents() != null) {
+            loopRunMap.put("parent", of(loopRun.parents().getLast()));
+            List<Map<String, Object>> parents = new ArrayList<>();
+            loopRun.parents().forEach(parent -> parents.add(of(parent)));
+            loopRunMap.put("parents", parents);
+        }
+        return loopRunMap;
+    }
+
+    private static Map<String, Object> of(LoopRun.Parent parent) {
+        Map<String, Object> parentMap = HashMap.newHashMap(3);
+        parentMap.put("index", parent.index());
+        if (parent.key() != null) {
+            parentMap.put("key", parent.key());
+        }
+        parentMap.put("value", parent.value());
+        return parentMap;
+    }
+
+    /**
+     * Returns an immutable map representation of the given {@link Execution}.
+     */
+    static Map<String, Object> of(Execution execution) {
+        ImmutableMap.Builder<String, Object> executionMap = ImmutableMap.builder();
+
+        executionMap.put("id", execution.getId());
+
+        if (execution.getState() != null) { // can occur in tests
+            executionMap.put("state", execution.getState().getCurrent());
+        }
+
+        Optional.ofNullable(execution.getState()).map(State::getStartDate)
+            .ifPresent(startDate -> executionMap.put("startDate", startDate));
+
+        Optional.ofNullable(execution.getState()).flatMap(State::getEndDate)
+            .ifPresent(endDate -> executionMap.put("endDate", endDate));
+
+        Optional.ofNullable(execution.getOriginalId())
+            .ifPresent(originalId -> executionMap.put("originalId", originalId));
+
+        if (execution.getOutputs() != null) {
+            executionMap.put("outputs", execution.getOutputs());
+        }
+
+        return executionMap.build();
+    }
+
+    /**
+     * Returns an immutable map representation of the given {@link KestraConfiguration}.
+     */
+    static Map<String, String> of(KestraConfiguration kestraConfiguration) {
+        Map<String, String> kestra = HashMap.newHashMap(2);
+        if (kestraConfiguration.environment() != null) {
+            kestra.put("environment", kestraConfiguration.environment());
+        }
+        if (kestraConfiguration.url() != null) {
+            kestra.put("url", kestraConfiguration.url());
+        }
+        return kestra;
     }
 
     /**
@@ -114,6 +286,8 @@ public final class RunVariables {
         Builder withFlow(FlowInterface flow);
 
         Builder withInputs(Map<String, Object> inputs);
+
+        Builder withOutputs(Map<String, Object> outputs);
 
         Builder withTask(Task task);
 
@@ -138,13 +312,22 @@ public final class RunVariables {
         /**
          * Builds the immutable map of run variables.
          *
-         * @param logger    The {@link RunContextLogger logger}
-         * @return          The immutable map of variables.
+         * @param logger The {@link RunContextLogger logger}
+         * @return The immutable map of variables.
          */
         Map<String, Object> build(RunContextLogger logger, PropertyContext propertyContext);
+
+        /**
+         * Returns the plaintext values of any SECRET-typed flow output decrypted while building the
+         * variables map, so callers can carry them across the executor/worker boundary for log masking.
+         */
+        default List<String> secretOutputs() {
+            return List.of();
+        }
     }
 
-    public record KestraConfiguration(String environment, String url) { }
+    public record KestraConfiguration(String environment, String url) {
+    }
 
     /**
      * Default builder class for constructing variables.
@@ -161,11 +344,13 @@ public final class RunVariables {
         protected boolean decryptVariables = true;
         protected Map<String, Object> variables;
         protected Map<String, Object> inputs;
+        protected Map<String, Object> outputs;
         protected Map<String, ?> envs;
         protected Map<?, ?> globals;
         private final Optional<String> secretKey;
         private List<String> secretInputs;
         private KestraConfiguration kestraConfiguration;
+        private final List<String> secretOutputs;
 
         public DefaultBuilder() {
             this(Optional.empty());
@@ -173,6 +358,15 @@ public final class RunVariables {
 
         public DefaultBuilder(final Optional<String> secretKey) {
             this.secretKey = secretKey;
+            this.secretOutputs = new ArrayList<>();
+        }
+
+        /**
+         * {@inheritDoc}
+         */
+        @Override
+        public List<String> secretOutputs() {
+            return secretOutputs;
         }
 
         // Note: for performance reason, cloning maps should be avoided as much as possible.
@@ -180,7 +374,7 @@ public final class RunVariables {
         public Map<String, Object> build(final RunContextLogger logger, final PropertyContext propertyContext) {
             ImmutableMap.Builder<String, Object> builder = ImmutableMap.builder();
 
-            builder.put("envs", envs != null ? envs : Map.of());
+            builder.put(ENVS, envs != null ? envs : Map.of());
             builder.put("globals", globals != null ? globals : Map.of());
 
             // Flow
@@ -200,94 +394,72 @@ public final class RunVariables {
 
             // Trigger
             if (trigger != null) {
-                builder.put("trigger", RunVariables.of(trigger));
-            }
-
-            // Parents
-            if (taskRun != null && execution != null) {
-                List<Map<String, Object>> parents = execution.parents(taskRun);
-                builder.put("parents", parents);
-                if (!parents.isEmpty()) {
-                    builder.put("parent", parents.getFirst());
-                }
+                var triggerVariables = RunVariables.of(trigger);
+                builder.put("trigger", triggerVariables);
             }
 
             // Execution
             if (execution != null) {
-                ImmutableMap.Builder<String, Object> executionMap = ImmutableMap.builder();
+                // The real execution will be used to retrieve the execution context, including triggers and inputs as they are omitted by the Execution.loopExecution method for performance reasons
+                var realExecution = execution.getLoopRun() != null ? execution.getLoopRun().parent() : execution;
 
-                executionMap.put("id", execution.getId());
-
-                if (execution.getState() != null) { // can occur in tests
-                    executionMap.put("state", execution.getState().getCurrent());
-                }
-
-                Optional.ofNullable(execution.getState()).map(State::getStartDate)
-                    .ifPresent(startDate -> executionMap.put("startDate", startDate));
-
-                Optional.ofNullable(execution.getOriginalId())
-                    .ifPresent(originalId -> executionMap.put("originalId", originalId));
-
-                if (execution.getOutputs() != null) {
-                    executionMap.put("outputs", execution.getOutputs());
-                }
-
-                builder.put("execution", executionMap.build());
-
-                if (execution.getTaskRunList() != null) {
-                    Map<String, Object> outputs = execution.outputs();
-                    if (decryptVariables) {
-                        final Secret secret = new Secret(secretKey, logger);
-                        outputs = secret.decrypt(outputs);
+                // Parents
+                if (taskRun != null) {
+                    List<Map<String, Object>> parents = parents(execution, taskRun);
+                    builder.put("parents", parents);
+                    if (!parents.isEmpty()) {
+                        builder.put("parent", parents.getFirst());
                     }
-                    builder.put("outputs", outputs);
+                }
 
-                    Map<String, Object> tasksMap = new HashMap<>();
+                builder.put("execution", RunVariables.of(realExecution));
 
-                    execution.getTaskRunList().forEach(taskRun -> {
-                        if (taskRun.getState() != null) {
-                            if (taskRun.getValue() == null) {
-                                tasksMap.put(taskRun.getTaskId(), Map.of("state", taskRun.getState().getCurrent()));
-                            } else {
-                                if (tasksMap.containsKey(taskRun.getTaskId())) {
-                                    @SuppressWarnings("unchecked")
-                                    Map<String, Object> taskRunMap = (Map<String, Object>) tasksMap.get(taskRun.getTaskId());
-                                    taskRunMap.put(taskRun.getValue(), Map.of("state", taskRun.getState().getCurrent()));
-                                    tasksMap.put(taskRun.getTaskId(), taskRunMap);
-                                } else {
-                                    Map<String, Object> taskRunMap = new HashMap<>();
-                                    taskRunMap.put(taskRun.getValue(), Map.of("state", taskRun.getState().getCurrent()));
-                                    tasksMap.put(taskRun.getTaskId(), taskRunMap);
-                                }
-                            }
-                        }
-                    });
+                if (!MapUtils.isEmpty(outputs)) {
+                    if (decryptVariables) {
+                        // mask SECRET-typed flow output and trigger output
+                        final Secret secret = new Secret(secretKey, logger, decrypted ->
+                        {
+                            secretOutputs.add(decrypted);
+                            logger.usedSecret(decrypted);
+                        });
+                        builder.put("outputs", secret.decrypt(outputs));
+                    } else {
+                        builder.put("outputs", outputs);
+                    }
+                } else {
+                    builder.put("outputs", Collections.emptyMap());
+                }
 
+                if (execution.getTaskRunList() != null || realExecution.getTaskRunList() != null) {
+                    var taskRunList = ListUtils.concat(execution.getTaskRunList(), realExecution.getTaskRunList());
+                    Map<String, Object> tasksMap = computeTasksMap(taskRunList);
                     builder.put("tasks", tasksMap);
                 }
 
                 // Inputs
                 Map<String, Object> inputs = this.inputs == null ? new HashMap<>() : new HashMap<>(this.inputs);
-                if (execution.getInputs() != null) {
-                    inputs.putAll(execution.getInputs());
-                    if (decryptVariables && flow != null && flow.getInputs() != null) {
-                        // if some inputs are of type secret, we decode them
+                if (realExecution.getInputs() != null) {
+                    inputs.putAll(realExecution.getInputs());
+                    if (decryptVariables && !ListUtils.isEmpty(secretInputs)) {
                         final Secret secret = new Secret(secretKey, logger);
-                        for (Input<?> input : flow.getInputs()) {
-                            if (input instanceof SecretInput) {
-                                decodeInput(secret, input.getId(), inputs);
-                            }
+                        for (String secretId : secretInputs) {
+                            decodeInput(secret, secretId, inputs);
                         }
                     }
                 }
 
                 if (flow != null && flow.getInputs() != null) {
-                    // we add default inputs value from the flow if not already set, this will be useful for triggers
-                    flow.getInputs().stream()
-                        .filter(input -> input.getDefaults() != null && !inputs.containsKey(input.getId()))
-                        .forEach(input -> {
+                    // Create a new PropertyContext with 'flow' variables which are required by some pebble expressions.
+                    PropertyContextWithVariables context = new PropertyContextWithVariables(propertyContext, Map.of("flow", RunVariables.of(flow)));
+
+                    // we add default inputs value from the flow if not already set, this will be useful for triggers.
+                    // FORM inputs are expanded to dotted leaves so a grouped child's default nests under its form key.
+                    flow.resolvableInputs().stream()
+                        .filter(input -> input.getDefaults() != null && !containsNested(inputs, input.getId()))
+                        .forEach(input ->
+                        {
                             try {
-                                inputs.put(input.getId(), FlowInputOutput.resolveDefaultValue(input, propertyContext));
+                                putNested(inputs, input.getId(), FlowInputOutput.resolveDefaultValue(input, context));
                             } catch (IllegalVariableEvaluationException e) {
                                 // Silent catch, if an input depends on another input, or a variable that is populated at runtime / input filling time, we can't resolve it here.
                             }
@@ -300,31 +472,54 @@ public final class RunVariables {
                     // if a secret input is used, add it to the list of secrets to mask on the logger
                     if (logger != null && !ListUtils.isEmpty(secretInputs)) {
                         for (String secretInput : secretInputs) {
-                            String secret = (String) inputs.get(secretInput);
-                            if (secret != null) {
-                                logger.usedSecret(secret);
+                            Object secretValue = getNested(inputs, secretInput);
+                            if (secretValue != null) {
+                                String secret;
+                                // if decryption is disabled, secret input would be still a map of type and encrypted value
+                                if (!decryptVariables) {
+                                    secret = ((Map<String, String>) secretValue).get("value");
+                                } else {
+                                    secret = (String) secretValue;
+                                }
+                                if (secret != null) {
+                                    logger.usedSecret(secret);
+                                }
                             }
                         }
                     }
                 }
 
-                if (execution.getTrigger() != null && execution.getTrigger().getVariables() != null) {
-                    builder.put("trigger", execution.getTrigger().getVariables());
+                if (realExecution.getTrigger() != null) {
+                    var executionTrigger = realExecution.getTrigger();
+                    var triggerContext = Map.of(
+                        "id", executionTrigger.getId(),
+                        "type", executionTrigger.getType()
+                    );
 
-                    // temporal hack to add back the `schedule`variables
-                    // will be removed in 2.0
-                    if (Schedule.class.getName().equals(execution.getTrigger().getType())) {
-                        // add back its variables inside the `schedule` variables
-                        builder.put("schedule", execution.getTrigger().getVariables());
+                    if (executionTrigger.getVariables() != null) {
+                        Map<String, Object> triggerVariables = executionTrigger.getVariables();
+                        if (decryptVariables) {
+                            final Secret secret = new Secret(secretKey, logger);
+                            triggerVariables = secret.decrypt(triggerVariables);
+                        }
+                        triggerVariables.put("_context", triggerContext);
+                        builder.put("trigger", triggerVariables);
+                    } else {
+
+                        builder.put(
+                            "trigger", Map.of(
+                                "_context", triggerContext
+                            )
+                        );
                     }
                 }
 
                 if (execution.getLabels() != null) {
-                    builder.put("labels", Label.toNestedMap(execution.getLabels()));
+                    builder.put(LABELS, Label.toNestedMap(execution.getLabels()));
                 }
 
                 if (flow == null) {
-                    Flow flowFromExecution = Flow.builder()
+                    FlowInterface flowFromExecution = GenericFlow.builder()
                         .id(execution.getFlowId())
                         .tenantId(execution.getTenantId())
                         .revision(execution.getFlowRevision())
@@ -332,14 +527,25 @@ public final class RunVariables {
                         .build();
                     builder.put("flow", RunVariables.of(flowFromExecution));
                 }
+
+                // item from Loop
+                if (execution.getLoopRun() != null) {
+                    builder.put("item", RunVariables.of(execution.getLoopRun()));
+                }
+            } else if (flow != null) {
+                // if the execution is null, we should add flow labels
+                // this is useful for triggers that don't have an execution
+                builder.put(LABELS, Label.toNestedMap(flow.getLabels()));
             }
 
-            // variables
-            Optional.ofNullable(execution)
-                .map(Execution::getVariables)
+            // variables: execution-level variables take precedence, falling back to flow-level variables.
+            // Flow `vars.*` are exposed even without an execution so they resolve in flow-only contexts
+            // (e.g. triggers and display-time expression rendering).
+            Optional.ofNullable(execution).map(Execution::getVariables)
                 .or(() -> Optional.ofNullable(flow).map(FlowInterface::getVariables))
                 .map(HashMap::new)
-                .ifPresent(variables -> {
+                .ifPresent(variables ->
+                {
                     Object fixtureFiles = variables.remove(FIXTURE_FILES_KEY);
                     builder.put("vars", ImmutableMap.copyOf(variables));
 
@@ -350,14 +556,7 @@ public final class RunVariables {
 
             // Kestra configuration
             if (kestraConfiguration != null) {
-                Map<String, String> kestra = HashMap.newHashMap(2);
-                if (kestraConfiguration.environment() != null) {
-                    kestra.put("environment", kestraConfiguration.environment());
-                }
-                if (kestraConfiguration.url() != null) {
-                    kestra.put("url", kestraConfiguration.url());
-                }
-                builder.put("kestra", kestra);
+                builder.put("kestra", RunVariables.of(kestraConfiguration));
             }
 
             // adds any additional variables
@@ -381,14 +580,127 @@ public final class RunVariables {
                 decodeInput(secret, restOfId, (Map<String, Object>) inputs.get(nestedId));
             } else if (inputs.containsKey(id)) {
                 try {
-                    String decoded = secret.decrypt(((String) inputs.get(id)));
-                    inputs.put(id, decoded);
+                    Map<String, String> encryptedString = (Map<String, String>) inputs.get(id);
+                    if (encryptedString != null) {
+                        String decoded = secret.decrypt(encryptedString.get("value"));
+                        inputs.put(id, decoded);
+                    }
                 } catch (GeneralSecurityException e) {
                     throw new RuntimeException(e);
                 }
             }
         }
+
+        /**
+         * Nested-aware containsKey for a dotted id (e.g. {@code environment.region}): walks the nested input map and
+         * returns true only when every segment resolves down to the leaf key.
+         */
+        @SuppressWarnings("unchecked")
+        private boolean containsNested(Map<String, Object> inputs, String id) {
+            int dot = id.indexOf('.');
+            if (dot < 0) {
+                return inputs.containsKey(id);
+            }
+            Object child = inputs.get(id.substring(0, dot));
+            return child instanceof Map<?, ?> map && containsNested((Map<String, Object>) map, id.substring(dot + 1));
+        }
+
+        /**
+         * Nested-aware get for a dotted id (e.g. {@code credentials.api_key}): walks the nested input map and returns
+         * the leaf value, or {@code null} if any segment is missing or not a map.
+         */
+        @SuppressWarnings("unchecked")
+        private Object getNested(Map<String, Object> inputs, String id) {
+            int dot = id.indexOf('.');
+            if (dot < 0) {
+                return inputs.get(id);
+            }
+            Object child = inputs.get(id.substring(0, dot));
+            return child instanceof Map<?, ?> map ? getNested((Map<String, Object>) map, id.substring(dot + 1)) : null;
+        }
+
+        /**
+         * Nested-aware put for a dotted id: creates intermediate maps as needed so a FORM child default lands under its
+         * form key (mirrors {@link io.kestra.core.utils.MapUtils#flattenToNestedMap(Map)}).
+         */
+        @SuppressWarnings("unchecked")
+        private void putNested(Map<String, Object> inputs, String id, Object value) {
+            int dot = id.indexOf('.');
+            if (dot < 0) {
+                inputs.put(id, value);
+                return;
+            }
+            String head = id.substring(0, dot);
+            Object child = inputs.get(head);
+            if (!(child instanceof Map)) {
+                child = new HashMap<String, Object>();
+                inputs.put(head, child);
+            }
+            putNested((Map<String, Object>) child, id.substring(dot + 1), value);
+        }
+
+        private List<Map<String, Object>> parents(Execution execution, TaskRun taskRun) {
+            List<TaskRun> parents = execution.findParents(taskRun);
+            Collections.reverse(parents);
+
+            List<Map<String, Object>> result = new ArrayList<>(parents.size());
+            for (TaskRun parent : parents) {
+                Map<String, Object> current = HashMap.newHashMap(2);
+
+                current.put("task", Map.of("id", parent.getTaskId()));
+
+                if (parent.getValue() != null) {
+                    current.put("taskrun", Map.of("value", parent.getValue()));
+                }
+
+                result.add(current);
+            }
+
+            return result;
+        }
+
+        private Map<String, Object> computeTasksMap(List<TaskRun> taskRunList) {
+            Map<String, Object> tasksMap = new LinkedHashMap<>();
+            taskRunList.forEach(taskRun ->
+            {
+                if (taskRun.getState() != null) {
+                    if (taskRun.getValue() == null) {
+                        Map<String, Object> stateMap = HashMap.newHashMap(2);
+                        stateMap.put("state", taskRun.getState().getCurrent());
+                        tasksMap.put(taskRun.getTaskId(), stateMap);
+                    } else {
+                        if (tasksMap.containsKey(taskRun.getTaskId())) {
+                            @SuppressWarnings("unchecked")
+                            Map<String, Object> taskRunMap = (Map<String, Object>) tasksMap.get(taskRun.getTaskId());
+                            taskRunMap.put(taskRun.getValue(), Map.of("state", taskRun.getState().getCurrent()));
+                            tasksMap.put(taskRun.getTaskId(), taskRunMap);
+                        } else {
+                            Map<String, Object> taskRunMap = new HashMap<>();
+                            taskRunMap.put(taskRun.getValue(), Map.of("state", taskRun.getState().getCurrent()));
+                            tasksMap.put(taskRun.getTaskId(), taskRunMap);
+                        }
+                    }
+                }
+            });
+            return tasksMap;
+        }
+
+        private record PropertyContextWithVariables(
+            PropertyContext delegate,
+            Map<String, Object> variables) implements PropertyContext {
+
+            @Override
+            public String render(String inline, Map<String, Object> variables) throws IllegalVariableEvaluationException {
+                return delegate.render(inline, variables.isEmpty() ? this.variables : variables);
+            }
+
+            @Override
+            public Map<String, Object> render(Map<String, Object> inline, Map<String, Object> variables) throws IllegalVariableEvaluationException {
+                return delegate.render(inline, variables.isEmpty() ? this.variables : variables);
+            }
+        }
     }
 
-    private RunVariables(){}
+    private RunVariables() {
+    }
 }
