@@ -1,18 +1,21 @@
 package io.kestra.core.runners.pebble.filters;
 
-import com.google.common.collect.ImmutableMap;
-import io.kestra.core.exceptions.IllegalVariableEvaluationException;
-import io.kestra.core.runners.VariableRenderer;
-import io.kestra.core.junit.annotations.KestraTest;
-import jakarta.inject.Inject;
-import org.junit.jupiter.api.Test;
-
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Map;
+
+import org.junit.jupiter.api.Test;
+
+import com.google.common.collect.ImmutableMap;
+
+import io.kestra.core.exceptions.IllegalVariableEvaluationException;
+import io.kestra.core.junit.annotations.KestraTest;
+import io.kestra.core.runners.VariableRenderer;
+
+import jakarta.inject.Inject;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -26,11 +29,13 @@ class JqFilterTest {
         String render = variableRenderer.render("{{ [1, 2, 3] | jq(\".[0]\") | first }}", Map.of());
         assertThat(render).isEqualTo("1");
 
-        render = variableRenderer.render("{{ my_vars | jq(\".test[0]\") }}", Map.of(
-            "my_vars", Map.of(
-                "test", Arrays.asList(1, 2, 3)
+        render = variableRenderer.render(
+            "{{ my_vars | jq(\".test[0]\") }}", Map.of(
+                "my_vars", Map.of(
+                    "test", Arrays.asList(1, 2, 3)
+                )
             )
-        ));
+        );
         assertThat(render).isEqualTo("[1]");
     }
 
@@ -51,23 +56,25 @@ class JqFilterTest {
         ZonedDateTime date = ZonedDateTime.parse("2013-09-08T16:19:00+02").withZoneSameLocal(ZoneId.systemDefault());
 
         ImmutableMap<String, Object> vars = ImmutableMap.of(
-            "vars", ImmutableMap.of("second", Map.of(
-                "string", "string",
-                "int", 1,
-                "float", 1.123F,
-                "list", Arrays.asList(
-                    "string",
-                    1,
-                    1.123F
-                ),
-                "bool", true,
-                "date", date,
-                "map", Map.of(
+            "vars", ImmutableMap.of(
+                "second", Map.of(
                     "string", "string",
                     "int", 1,
-                    "float", 1.123F
+                    "float", 1.123F,
+                    "list", Arrays.asList(
+                        "string",
+                        1,
+                        1.123F
+                    ),
+                    "bool", true,
+                    "date", date,
+                    "map", Map.of(
+                        "string", "string",
+                        "int", 1,
+                        "float", 1.123F
+                    )
                 )
-            ))
+            )
         );
 
         String render = variableRenderer.render("{{ vars | jq(\".second.string\") }}", vars);
@@ -133,7 +140,7 @@ class JqFilterTest {
         ImmutableMap<String, Object> vars = ImmutableMap.of(
             "vars", ImmutableMap.of(
                 "object", Map.of("key", "value"),
-                "array", new String[]{"arrayValue"}
+                "array", new String[] { "arrayValue" }
             )
         );
 
