@@ -1,22 +1,23 @@
 package io.kestra.plugin.core.trigger;
 
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+
+import org.junit.jupiter.api.Test;
+
+import io.kestra.core.junit.annotations.KestraTest;
 import io.kestra.core.models.Label;
 import io.kestra.core.models.executions.Execution;
 import io.kestra.core.models.executions.ExecutionTrigger;
 import io.kestra.core.models.flows.State;
 import io.kestra.core.models.property.Property;
-import io.kestra.core.models.triggers.multipleflows.MultipleConditionStorageInterface;
 import io.kestra.core.runners.RunContextFactory;
-import io.kestra.plugin.core.debug.Return;
 import io.kestra.core.utils.IdUtils;
-import io.kestra.core.junit.annotations.KestraTest;
-import jakarta.inject.Inject;
-import org.junit.jupiter.api.Test;
+import io.kestra.plugin.core.debug.Return;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import jakarta.inject.Inject;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -24,9 +25,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 class FlowTest {
     @Inject
     RunContextFactory runContextFactory;
-
-    @Inject
-    Optional<MultipleConditionStorageInterface> multipleConditionStorage;
 
     @Test
     void success() {
@@ -40,22 +38,28 @@ class FlowTest {
                     new Label("flow-label-2", "flow-label-2")
                 )
             )
-            .tasks(Collections.singletonList(Return.builder()
-                .id("test")
-                .type(Return.class.getName())
-                .format(Property.ofValue("test"))
-                .build()))
+            .tasks(
+                Collections.singletonList(
+                    Return.builder()
+                        .id("test")
+                        .type(Return.class.getName())
+                        .format(Property.ofValue("test"))
+                        .build()
+                )
+            )
             .build();
         var execution = Execution.builder()
             .id(IdUtils.create())
             .namespace("io.kestra.unittest")
             .flowId("flow-with-flow-trigger")
             .flowRevision(1)
-            .state(State.of(State.Type.RUNNING, Collections.emptyList()))
-            .labels(List.of(
-                new Label("execution-label", "execution"),
-                new Label (Label.CORRELATION_ID, "correlationId")
-            ))
+            .state(new State().withState(State.Type.RUNNING))
+            .labels(
+                List.of(
+                    new Label("execution-label", "execution"),
+                    new Label(Label.CORRELATION_ID, "correlationId")
+                )
+            )
             .build();
         var flowTrigger = Flow.builder()
             .id("flow")
@@ -63,7 +67,8 @@ class FlowTest {
             .build();
 
         Optional<Execution> evaluate = flowTrigger.evaluate(
-                multipleConditionStorage, runContextFactory.of(),
+            Optional.empty(),
+            runContextFactory.of(),
             flow,
             execution
         );
@@ -89,11 +94,15 @@ class FlowTest {
                     new Label("flow-label-2", "flow-label-2")
                 )
             )
-            .tasks(Collections.singletonList(Return.builder()
-                .id("test")
-                .type(Return.class.getName())
-                .format(Property.ofValue("test"))
-                .build()))
+            .tasks(
+                Collections.singletonList(
+                    Return.builder()
+                        .id("test")
+                        .type(Return.class.getName())
+                        .format(Property.ofValue("test"))
+                        .build()
+                )
+            )
             .build();
         var execution = Execution.builder()
             .id(IdUtils.create())
@@ -101,11 +110,13 @@ class FlowTest {
             .namespace("io.kestra.unittest")
             .flowId("flow-with-flow-trigger")
             .flowRevision(1)
-            .state(State.of(State.Type.RUNNING, Collections.emptyList()))
-            .labels(List.of(
-                new Label("execution-label", "execution"),
-                new Label (Label.CORRELATION_ID, "correlationId")
-            ))
+            .state(new State().withState(State.Type.RUNNING))
+            .labels(
+                List.of(
+                    new Label("execution-label", "execution"),
+                    new Label(Label.CORRELATION_ID, "correlationId")
+                )
+            )
             .build();
         var flowTrigger = Flow.builder()
             .id("flow")
@@ -113,7 +124,8 @@ class FlowTest {
             .build();
 
         Optional<Execution> evaluate = flowTrigger.evaluate(
-                multipleConditionStorage, runContextFactory.of(),
+            Optional.empty(),
+            runContextFactory.of(),
             flow,
             execution
         );
@@ -133,39 +145,49 @@ class FlowTest {
             .id("flow-with-flow-trigger")
             .namespace("io.kestra.unittest")
             .revision(1)
-            .labels(List.of(
-                new Label("flow-label-1", "flow-label-1"),
-                new Label("flow-label-2", "flow-label-2")
-            ))
-            .tasks(Collections.singletonList(Return.builder()
-                .id("test")
-                .type(Return.class.getName())
-                .format(Property.ofValue("test"))
-                .build()))
+            .labels(
+                List.of(
+                    new Label("flow-label-1", "flow-label-1"),
+                    new Label("flow-label-2", "flow-label-2")
+                )
+            )
+            .tasks(
+                Collections.singletonList(
+                    Return.builder()
+                        .id("test")
+                        .type(Return.class.getName())
+                        .format(Property.ofValue("test"))
+                        .build()
+                )
+            )
             .build();
         var execution = Execution.builder()
             .id(IdUtils.create())
             .namespace("io.kestra.unittest")
             .flowId("flow-with-flow-trigger")
             .flowRevision(1)
-            .state(State.of(State.Type.RUNNING, Collections.emptyList()))
-            .labels(List.of(
-                new Label("execution-label", "execution"),
-                new Label (Label.CORRELATION_ID, "correlationId")
-            ))
+            .state(new State().withState(State.Type.RUNNING))
+            .labels(
+                List.of(
+                    new Label("execution-label", "execution"),
+                    new Label(Label.CORRELATION_ID, "correlationId")
+                )
+            )
             .build();
         var flowTrigger = Flow.builder()
             .id("flow")
             .type(Flow.class.getName())
-            .labels(List.of(
-                new Label("trigger-label-1", "trigger-label-1"),
-                new Label("trigger-label-2", "{{ 'trigger-label-2' }}"),
-                new Label("trigger-label-3", "{{ null }}"), // should return an empty string
-                new Label("trigger-label-4", "{{ foobar }}") // should fail
-            ))
+            .labels(
+                List.of(
+                    new Label("trigger-label-1", "trigger-label-1"),
+                    new Label("trigger-label-2", "{{ 'trigger-label-2' }}"),
+                    new Label("trigger-label-3", "{{ null }}"), // should return an empty string
+                    new Label("trigger-label-4", "{{ foobar }}") // should fail
+                )
+            )
             .build();
 
-        Optional<Execution> evaluate = flowTrigger.evaluate(multipleConditionStorage, runContextFactory.of(), flow, execution);
+        Optional<Execution> evaluate = flowTrigger.evaluate(Optional.empty(), runContextFactory.of(), flow, execution);
 
         assertThat(evaluate.isPresent()).isTrue();
         assertThat(evaluate.get().getLabels()).hasSize(5);
@@ -177,5 +199,101 @@ class FlowTest {
         assertThat(evaluate.get().getLabels()).contains(new Label(Label.CORRELATION_ID, "correlationId"));
         assertThat(evaluate.get().getTrigger()).extracting(ExecutionTrigger::getVariables).hasFieldOrProperty("executionLabels");
         assertThat(evaluate.get().getTrigger().getVariables().get("executionLabels")).isEqualTo(Map.of("execution-label", "execution"));
+    }
+
+    @Test
+    void success_withDynamicLabels() {
+        var flow = io.kestra.core.models.flows.Flow.builder()
+            .id("flow-with-flow-trigger")
+            .namespace("io.kestra.unittest")
+            .revision(1)
+            .tasks(
+                Collections.singletonList(
+                    Return.builder()
+                        .id("test")
+                        .type(Return.class.getName())
+                        .format(Property.ofValue("test"))
+                        .build()
+                )
+            )
+            .build();
+        var triggeringExecution = Execution.builder()
+            .id(IdUtils.create())
+            .namespace("io.kestra.unittest.upstream")
+            .flowId("upstream-flow")
+            .flowRevision(1)
+            .state(new State().withState(State.Type.RUNNING))
+            .build();
+        var flowTrigger = Flow.builder()
+            .id("flow")
+            .type(Flow.class.getName())
+            .labels(
+                List.of(
+                    new Label("triggering-execution-id", "{{ trigger.executionId }}"),
+                    new Label("triggering-namespace", "{{ trigger.namespace }}"),
+                    new Label("triggering-flow-id", "{{ trigger.flowId }}")
+                )
+            )
+            .build();
+
+        Optional<Execution> evaluate = flowTrigger.evaluate(
+            Optional.empty(),
+            runContextFactory.of(),
+            flow,
+            triggeringExecution
+        );
+
+        assertThat(evaluate.isPresent()).isTrue();
+        assertThat(evaluate.get().getLabels()).hasSize(3);
+        assertThat(evaluate.get().getLabels()).contains(new Label("triggering-execution-id", triggeringExecution.getId()));
+        assertThat(evaluate.get().getLabels()).contains(new Label("triggering-namespace", "io.kestra.unittest.upstream"));
+        assertThat(evaluate.get().getLabels()).contains(new Label("triggering-flow-id", "upstream-flow"));
+    }
+
+    @Test
+    void success_withInvalidDynamicLabel() {
+        var flow = io.kestra.core.models.flows.Flow.builder()
+            .id("flow-with-flow-trigger")
+            .namespace("io.kestra.unittest")
+            .revision(1)
+            .tasks(
+                Collections.singletonList(
+                    Return.builder()
+                        .id("test")
+                        .type(Return.class.getName())
+                        .format(Property.ofValue("test"))
+                        .build()
+                )
+            )
+            .build();
+        var triggeringExecution = Execution.builder()
+            .id(IdUtils.create())
+            .namespace("io.kestra.unittest.upstream")
+            .flowId("upstream-flow")
+            .flowRevision(1)
+            .state(new State().withState(State.Type.RUNNING))
+            .build();
+        var flowTrigger = Flow.builder()
+            .id("flow")
+            .type(Flow.class.getName())
+            .labels(
+                List.of(
+                    new Label("triggering-execution-id", "{{ trigger.executionId }}"),
+                    new Label("unknown-trigger-field", "{{ trigger.doesNotExist }}") // should be omitted, not fail the evaluation
+                )
+            )
+            .build();
+
+        Optional<Execution> evaluate = flowTrigger.evaluate(
+            Optional.empty(),
+            runContextFactory.of(),
+            flow,
+            triggeringExecution
+        );
+
+        assertThat(evaluate.isPresent()).isTrue();
+        assertThat(evaluate.get().getLabels()).hasSize(1);
+        assertThat(evaluate.get().getLabels()).contains(new Label("triggering-execution-id", triggeringExecution.getId()));
+        assertThat(evaluate.get().getLabels()).noneMatch(label -> label.key().equals("unknown-trigger-field"));
     }
 }
